New normalization methods on URLNormalizer: #encodeNonURICharacters() and #encodeSpaces(). With these, spaces are no longer escaped automatically by default.